--- a/src/styles/layouts/_blog.scss
+++ b/src/styles/layouts/_blog.scss
@@ -9,7 +9,7 @@
   }
 
   @include desktop {
-    margin-top: 124px;
+    margin-top: 133px;
   }
 
   &__header {
