--- a/src/styles/layouts/_faq.scss
+++ b/src/styles/layouts/_faq.scss
@@ -15,7 +15,7 @@
     position: relative;
 
     @include desktop {
-      margin-top: 127px;
+      margin-top: 120px;
     }
 
     &::before {
